Editor: Prevent scrollbar from appearing in IE11

--- a/client/post-editor/editor-title/style.scss
+++ b/client/post-editor/editor-title/style.scss
@@ -42,6 +42,7 @@
 	color: $gray-dark;
 	font-weight: 600;
 	resize: none;
+	-ms-overflow-y: hidden !important;
 
 	&:focus {
 		box-shadow: none;
